# zed-renpy

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
debug_adapter_schemas/: renpy.json
examples/: test.rpy
grammar/: README.md
languages/renpy/: config.toml  highlights.scm  indents.scm  injections.scm  outline.scm
server/: Cargo.toml
server/assets/: generate_doc_links.py  renpy-doc-links.json  zed_renpy_debug.rpe.py
server/src/: dap.rs  main.rs  renpy_cli.rs
src/: lib.rs
tests/: e2e_dap.py  e2e_debug_real.py  e2e_lsp.py
tests/fixture-sdk/: renpy.py  renpy.sh
tests/fixture/game/: broken.rpy  script.rpy  shop.rpy
